fixed: form wider than screen on small screens

--- a/src/sass/core/_layout.scss
+++ b/src/sass/core/_layout.scss
@@ -31,6 +31,7 @@ body {
     position: relative;
     text-align: left;
     width: $max-content-width;
+    max-width: 100%;
     article {
         @include flex(1);
         @include display-flex;
